# ttrpg_assistant

./: .clang-tidy  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  python3_requirements.txt
analyzer/: CMakeLists.txt
analyzer/include/analyzer/: aggressive_melee_strategy.h  automated_interaction_system.h  combat_analyzer.h  decision_strategy.h
analyzer/main/: analyzer_main.cpp
analyzer/src/: CMakeLists.txt  aggressive_melee_strategy.cpp  combat_analyzer.cpp
assistant/: CMakeLists.txt
assistant/images/: warrior2.png:Zone.Identifier
assistant/include/assistant/: interaction_system.h
assistant/include/assistant/audio_input/: audio_input.h  audio_input_system.h  intent_recognizer.h  speech_to_text.h
assistant/include/assistant/gui/: board.h
assistant/main/: main.cpp
assistant/src/: CMakeLists.txt  interaction_system.cpp
assistant/src/audio_input/: CMakeLists.txt  audio_input.cpp  audio_input_system.cpp  intent_recognizer.cpp  prompt.cpp  speech_to_text.cpp
assistant/src/gui/: CMakeLists.txt  board.cpp  texture_storage.cpp
pf2e_engine/: CMakeLists.txt
pf2e_engine/cpp_config/: cpp_config.h
pf2e_engine/data/actions/: attack.json  attacks_of_opportunity.json  burst_of_fear.json  demoralize.json  fireball.json  move.json  remove_fear.json  stand.json  trip.json  wolf_jaws_attack.json
pf2e_engine/data/battle_maps/: simpe_map.json
pf2e_engine/data/creatures/: warrior.json  wizard.json  wolf.json
pf2e_engine/data/inventory/armor/: fullplate.json  leather.json
pf2e_engine/data/inventory/weapon/: dagger.json  longsword.json
pf2e_engine/data/schema/: schema.json
pf2e_engine/data/schemas/: armor.ttrpg
pf2e_engine/include/pf2e_engine/: alternatives.h  armor_class.h  armor_slot.h  armour_class.h  battle.h  battle_map.h  characteristics.h  combat_calculator.h  condition.h  creature.h  creature_size.h  effect_manager.h  feat.h  game_context.h  game_object_storage.h  hitpoints.h  i_interaction_system.h  initiative_order.h  intent_recognizer.h  interaction_system.h  observable.h  player.h  position.h  proficiency.h  random.h  resources.h  scheduler.h  success_level.h  traits_haver.h  vector2d.h  weapon_damage_factory.h  weapon_slot.h
pf2e_engine/include/pf2e_engine/action_blocks/: add_condition.h  attack_roll.h  base_function.h  block_input.h  calculate_difficulty_class.h  check_ally_adjacent.h  choose_from_list.h  choose_natural_weapon.h  choose_target.h  choose_weapon.h  contribute_damage_bonus.h  deal_damage.h  filter.h  flat_damage_roll.h  foldl.h  get_parameter.h  (+8 more)
pf2e_engine/main/: CMakeLists.txt  main.cpp
pf2e_engine/schemas/: schema.json
pf2e_engine/scripts/: data_validation.py
pf2e_engine/src/: CMakeLists.txt  armor_class.cpp  armor_slot.cpp  armour_class.cpp  battle.cpp  battle_map.cpp  characteristics.cpp  combat_calculator.cpp  condition.cpp  creature.cpp  creature_size.cpp  effect_manager.cpp  feat.cpp  game_object_storage.cpp  hitpoints.cpp  initiative_order.cpp  intent_recognizer.cpp  interaction_system.cpp  player.cpp  proficiency.cpp  random.cpp  resources.cpp  scheduler.cpp  success_level.cpp  weapon_damage_factory.cpp  weapon_slot.cpp
pf2e_engine/src/action_blocks/: CMakeLists.txt  add_condition.cpp  attack_roll.cpp  base_function.cpp  block_input.cpp  calculate_difficulty_class.cpp  check_ally_adjacent.cpp  choose_from_list.cpp  choose_natural_weapon.cpp  choose_target.cpp  choose_weapon.cpp  contribute_damage_bonus.cpp  deal_damage.cpp  filter.cpp  flat_damage_roll.cpp  foldl.cpp  get_parameter.cpp  get_targets_in_area.cpp  let.cpp  map.cpp  move.cpp  remove_condition.cpp  roll_against_difficulty_class.cpp  spell_damage_roll.cpp  weapon_damage_roll.cpp
pf2e_engine/src/actions/: CMakeLists.txt  action.cpp  action_block.cpp  action_reader.cpp  reaction.cpp  save_point.cpp
pf2e_engine/src/audio_input/: CMakeLists.txt  audio_input.cpp  audio_input_system.cpp  intent_recognizer.cpp  prompt.cpp  speech_to_text.cpp
pf2e_engine/src/common/: CMakeLists.txt  hash_combine.cpp
pf2e_engine/src/dice_expression/: CMakeLists.txt  dice.cpp  random.cpp
pf2e_engine/src/dsl/: CMakeLists.txt  ast_nodes.cpp  builtins.cpp  function_registry.cpp  lexer.cpp  parser.cpp  property_access.cpp  scope_guard.cpp  value_convert.cpp
pf2e_engine/src/expressions/: CMakeLists.txt  creature_expression.cpp  dice_expression.cpp  dice_expression_parser.cpp  math_expression.cpp  multi_dice_expression.cpp  number_expression.cpp
pf2e_engine/src/game_object_logic/: CMakeLists.txt  game_object_factory.cpp  game_object_register.cpp  game_object_registry.cpp  game_object_storage.cpp
pf2e_engine/src/gui/: CMakeLists.txt  board.cpp  texture_storage.cpp
pf2e_engine/src/inventory/: CMakeLists.txt  armor.cpp  armour.cpp  weapon.cpp
pf2e_engine/src/mechanics/: CMakeLists.txt  characteristics.cpp  damage.cpp  damage_resolver.cpp  hitpoints.cpp  savethrow.cpp  skills.cpp
pf2e_engine/src/transformation/: CMakeLists.txt  transformation.cpp  transformator.cpp
pf2e_engine/tests/: CMakeLists.txt  test_armor.cpp  test_characteristics.cpp  test_continuation.cpp  test_creature.cpp  test_hitpoints.cpp  test_random.cpp  test_resources.cpp  test_weapon_damage.cpp
pf2e_engine/tests/actions/: CMakeLists.txt  test_action_combat.cpp  test_wolf_combat.cpp
pf2e_engine/tests/ast/: CMakeLists.txt  ast_test_fixture.h  test_ast_state.cpp
pf2e_engine/tests/dice_expression/: CMakeLists.txt  test_dice.cpp  test_random.cpp
pf2e_engine/tests/dsl/: CMakeLists.txt  test_dsl_armor_property.cpp  test_dsl_evaluator.cpp  test_dsl_parser.cpp
pf2e_engine/tests/expressions/: CMakeLists.txt  test_expressions.cpp
pf2e_engine/tests/game_object_logic/: CMakeLists.txt  test_game_object_factory.cpp
pf2e_engine/tests/inventory/: CMakeLists.txt  test_armor.cpp  test_armour.cpp
pf2e_engine/tests/mechanics/: CMakeLists.txt  test_characteristics.cpp  test_damage_resolver.cpp  test_hitpoints.cpp
pf2e_engine/tests/test_lib/: game_context_from_part.h  mock_dice_roller.h  mock_interaction_system.h
pf2e_engine/tests/transformation/: CMakeLists.txt  test_transformation.cpp
(+77 files in other folders)
